--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 testpaths = test
 python_files = *test*.py
 python_classes = *Test*
-pyrhon_functions = *test*
+python_functions = *test*
+addopts = --alluredir=allure-files
